fixed issue with conflicting versions
